--- a/Progetto2019.ipynb
+++ b/Progetto2019.ipynb
@@ -8,14 +8,18 @@
    "source": [
     "import pandas as pd\n",
     "from datetime import datetime\n",
-    "#1 fATTO\n",
+    "#1 FATTO\n",
     "#2 FATTO\n",
-    "#3 NON FATTO, non so come identificare univocamente un borrower\n",
+    "#3 FATTO\n",
     "#4 FATTO\n",
     "#5 FATTO\n",
     "#6 FATTO\n",
     "#7 FATTO\n",
-    "#8 NON FATTO, non so dove trovare i soldi dati da ciascun lander"
+    "#8 NON FATTO, non so dove trovare i soldi dati da ciascun lander\n",
+    "#...\n",
+    "#...\n",
+    "#...\n",
+    "#12 FATTO"
    ]
   },
   {
@@ -70,9 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepro(chunk_x,ch_n):\n",
+    "def prepro(chunk_x):\n",
     "    new_df = pd.DataFrame(chunk_x.lenders.str.split(',').tolist(), index=chunk_x.loan_id).stack()\n",
-    "    print(ch_n)\n",
     "    return new_df"
    ]
   },
@@ -1480,10 +1483,8 @@
     "loans_lenders = pd.read_csv(r'dataset/loans_lenders.csv', chunksize=1000)\n",
     "\n",
     "chunk_list = [] \n",
-    "ch_n=0\n",
     "for chunk in loans_lenders:  \n",
-    "    ch_n+=1\n",
-    "    chunk_filter = prepro(chunk,ch_n)\n",
+    "    chunk_filter = prepro(chunk)\n",
     "    chunk_list.append(chunk_filter)\n",
     "    \n",
     "# Concatenazione dei chunk\n",
@@ -1505,7 +1506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1912,7 @@
        "[28293931 rows x 2 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1933,21 +1934,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\stefano\\AppData\\Local\\Programs\\Python\\Python36\\lib\\site-packages\\ipykernel_launcher.py:6: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
-      "  \n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2171,7 +2160,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2179,7 +2168,10 @@
    "source": [
     "# 2) For each loan, add a column duration corresponding to the number of days between the disburse time and the planned expiration time.\n",
     "loans=pd.read_csv(\"dataset/loans.csv\")\n",
-    "test=loans[0:10]  # Andrà rimosso, è fatto per non calcolare una tabella gigante\n",
+    "test=loans  # Andrà rimosso, è fatto per non calcolare una tabella gigante\n",
+    "test = test.dropna(subset=['planned_expiration_time'])\n",
+    "test = test.dropna(subset=['disburse_time'])\n",
+    "test=test.reset_index(drop=True)\n",
     "# Giorni di differenza \n",
     "FMT=\"%Y-%m-%d %H:%M:%S.%f %z\"\n",
     "test['duration']=(test['planned_expiration_time'].apply(lambda x: datetime.strptime(x, FMT)) - test['disburse_time'].apply(lambda x: datetime.strptime(x, FMT))).apply(lambda x:x.days)\n",
@@ -2255,25 +2247,255 @@
     }
    ],
    "source": [
-    "test.loc[test['loan_id']==551251]"
+    "test.loc[test['loan_id']==551251] # Da cancellare"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3)Find the borrowers that have funded at least twice.\n"
+    "# 3) Find the lenders that have funded at least twice.\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>lender_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>000</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>00000</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0002</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0101craign0101</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0132575</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0154884</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0161130</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0169713</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0185429</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0206338</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0219854</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0221581</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0239059</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0256321</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0265562</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0295920</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0307987</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0321212</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0326lsw</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0332772</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0346439</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0376099</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0384195</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0393784</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0407067</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0416503</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0422888</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0432352</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0443760</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0457584</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zozo</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zpedro4120</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zpm</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zroberts6084</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zroke1764</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zsfia9210</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zsige</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zsolt6809</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zsolt8483</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zsolt9958</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ztrana</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zubair4857</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zubin</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zuheirkrzysztof8166</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zulfikarali5625</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zulia3721</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zuni8016</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zusiman</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zussman4019</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zuzana5303</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zuzanna7983</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zuzanna9818</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zvi</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zx147</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zyrah8525</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zyrorl</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zzaman</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zzanita</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zzmcfate</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zzrvmf8538</th>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1005111 rows × 0 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: [ 000,  00000,  0002,  0101craign0101,  0132575,  0154884,  0161130,  0169713,  0185429,  0206338,  0219854,  0221581,  0239059,  0256321,  0265562,  0295920,  0307987,  0321212,  0326lsw,  0332772,  0346439,  0376099,  0384195,  0393784,  0407067,  0416503,  0422888,  0432352,  0443760,  0457584,  0509115,  0526528,  0545998,  0589889,  0595846,  0626305,  0648612,  0672816,  0684667,  0703092,  070707Weddingtablegifts,  0711782,  07272010,  0739360,  0743222,  0755154,  0764579,  0779467,  0797268,  07brit08,  0802769,  0816,  0819212,  0822911,  0844736,  0854755,  0858539,  0868635,  0878881,  0894610,  0919677,  0925751,  0934608,  0946122,  0959967,  0966668,  0983056,  0993353,  0bill9808,  0lauramelania9158,  0li,  0rchidhunter,  0x04b1d,  0x12is18,  0xfed0,  1000trucosparaahorrar,  100ofhumanity1199,  100thmonkey,  1019503,  101cookbooks,  10416122,  1044908,  1056077,  1066322,  106xin,  107496,  1082,  1082930,  1096,  1098802,  10commfhs7013,  10gis,  10ksbwinter20123747,  10yearitch,  1113032,  11220,  1122chelsea,  1128903,  113760,  114130, ...]\n",
+       "\n",
+       "[1005111 rows x 0 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#3)Find the borrowers that have funded at least twice.\n",
-    "## PROBLEMA COME SI FA IDENTIFICARE UNIVOCAMENTE UN BORROWER?\n",
-    "test2=loans[0:10000]"
+    "lender_mult=((loans_lenders_norm.groupby(\"lender_name\").count())>1) # Cerco i lender che hanno donato più di una volta\n",
+    "(lender_mult.loc[lender_mult['loan_id']]).drop(['loan_id'], axis=1) # stampo quelli uguali a True e elimino la colonna\n",
+    "\n"
    ]
   },
   {
@@ -2916,6 +3138,171 @@
    "source": [
     "#7-6*) Like the previous point, but expressed as a percentage of the overall amount lent. Year percentage of total found requested per country\n",
     "(test2.groupby(['country_name',(test2['disburse_time'].apply(lambda x: datetime.strptime(x, FMT).year))]).sum()).groupby(level=0).apply(lambda x:100 * x / (x.sum())).funded_amount"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# QUI CI VA TUTTO IL RESTO !!!!!!!!!!!!!!!!!!!!!!!!!!!!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 12) For each year, compute the total amount of loans. Each loan that has planned expiration time and disburse time in different years must have its amount distributed proportionally to the number of days in each year. For example, a loan with disburse time December 1st, 2016, planned expiration time January 30th 2018, and amount 5000USD has an amount of 5000USD * 31 / (31+365+30) = 363.85 for 2016, 5000USD * 365 / (31+365+30) = 4284.04 for 2017, and 5000USD * 30 / (31+365+30) = 352.11 for 2018."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test['disburse_time'].min() # Trovo l'anno minore presente nel dataframe\n",
+    "test['disburse_time'].max() # Trovo l'anno meggiore presente nel dataframe\n",
+    "\n",
+    "Dict = {2011:0,2012: 0,2013: 0, 2014: 0, 2015: 0, 2016: 0, 2017: 0, 2018: 0} # Creo il dizionario che conterrà gli importi annui\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcolo_giorni(data_inizioX,data_fineX,sommaX):\n",
+    "    if (data_inizioX<data_fineX): # controllo se il dataset è corretto\n",
+    "        data_inizioX=data_inizioX.date() # Tolgo il time\n",
+    "        data_fineX=data_fineX.date() # Tolgo il time\n",
+    "        count=[] # Vettore che conterrà i giorni per anno\n",
+    "        date_temp=data_inizioX # Inizializzo variabile temporanea a data iniziale\n",
+    "        while data_fineX.year != date_temp.year: # Ciclo se l'anno della data temporanea è diversa da l'anno finale\n",
+    "            date_old=date_temp # Var di scambio\n",
+    "            date_temp=(datetime.strptime(f\"{date_temp.year+1}-1-1\", \"%Y-%m-%d\")).date()  # anno succ, 1 genn\n",
+    "            count.append((date_temp-date_old).days) # Aggiungo il numero di giorni facendo diff tra data in ingresso ciclo e anno succ 1-1\n",
+    "        count.append((pd.to_datetime(data_fineX)).dayofyear) # Appendo al vettore il conteggio dei gg per l'ultimo anno, uso funzione to_datetime che mi da la distanza della data dal 1 gennaio\n",
+    "        x=0\n",
+    "        for ele in count:\n",
+    "            Dict[data_inizioX.year+x]+=int(sommaX)*(ele/sum(count)) # Eseguo formula calcolo e inserisco nel dict con la key corretta\n",
+    "            x+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          None\n",
+       "1          None\n",
+       "2          None\n",
+       "3          None\n",
+       "4          None\n",
+       "5          None\n",
+       "6          None\n",
+       "7          None\n",
+       "8          None\n",
+       "9          None\n",
+       "10         None\n",
+       "11         None\n",
+       "12         None\n",
+       "13         None\n",
+       "14         None\n",
+       "15         None\n",
+       "16         None\n",
+       "17         None\n",
+       "18         None\n",
+       "19         None\n",
+       "20         None\n",
+       "21         None\n",
+       "22         None\n",
+       "23         None\n",
+       "24         None\n",
+       "25         None\n",
+       "26         None\n",
+       "27         None\n",
+       "28         None\n",
+       "29         None\n",
+       "           ... \n",
+       "1044932    None\n",
+       "1044933    None\n",
+       "1044934    None\n",
+       "1044935    None\n",
+       "1044936    None\n",
+       "1044937    None\n",
+       "1044938    None\n",
+       "1044939    None\n",
+       "1044940    None\n",
+       "1044941    None\n",
+       "1044942    None\n",
+       "1044943    None\n",
+       "1044944    None\n",
+       "1044945    None\n",
+       "1044946    None\n",
+       "1044947    None\n",
+       "1044948    None\n",
+       "1044949    None\n",
+       "1044950    None\n",
+       "1044951    None\n",
+       "1044952    None\n",
+       "1044953    None\n",
+       "1044954    None\n",
+       "1044955    None\n",
+       "1044956    None\n",
+       "1044957    None\n",
+       "1044958    None\n",
+       "1044959    None\n",
+       "1044960    None\n",
+       "1044961    None\n",
+       "Length: 1044962, dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "FMTD=\"%Y-%m-%d %H:%M:%S.%f %z\"\n",
+    "test.apply(lambda x: calcolo_giorni(datetime.strptime(x[\"disburse_time\"], FMTD),datetime.strptime(x[\"planned_expiration_time\"], FMTD),x[\"funded_amount\"]), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La funzione apply restituisce \"None\" perchè si aspetta qualcosa in ritorno dalla funzione, ma in questo caso non serve. Invece di utilizzare l'apply si potrebbe semplicemente ciclare tutto il dataset con un for per tutta la lunghezza del df ma risulta meno \"elegante\".\n",
+    "\n",
+    "Nella funzione calcolo_giorni è stato inserito un check se la data di inizio è maggiore della data di fine perchè vi è almeno un caso in cui questo succede, probabilmente i due valori sono invertiti ma per non commettere ulteriori errori è stato deciso di non prendere in considerazione i record in cui si verifica questo problema."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nell'anno 2011 l'ammontare totale dei prestiti è stato di: 650287.46 $\n",
+      "Nell'anno 2012 l'ammontare totale dei prestiti è stato di: 108599930.74 $\n",
+      "Nell'anno 2013 l'ammontare totale dei prestiti è stato di: 120252197.67 $\n",
+      "Nell'anno 2014 l'ammontare totale dei prestiti è stato di: 145474691.14 $\n",
+      "Nell'anno 2015 l'ammontare totale dei prestiti è stato di: 147877949.71 $\n",
+      "Nell'anno 2016 l'ammontare totale dei prestiti è stato di: 144820035.90 $\n",
+      "Nell'anno 2017 l'ammontare totale dei prestiti è stato di: 156093350.97 $\n",
+      "Nell'anno 2018 l'ammontare totale dei prestiti è stato di: 3336331.40 $\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in Dict:\n",
+    "    print(f\"Nell'anno {key} l'ammontare totale dei prestiti è stato di: {Dict[key]:.2f} $\")"
    ]
   },
   {
@@ -4590,6 +4977,19 @@
    ],
    "source": [
     "lenders.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Appunti\n",
+    "Probabilmente il dataset non è molto accurato, ad esempio se si effettuano delle comparazioni tra i dataset del punto 1 e 2 si può notare come il numero dei lenders non corrisponda, è stata effettuata una ricerca anche sui csv originali per essere sicuri che non ci sia stato un problema durante lo scripting.\n",
+    "esempio:\n",
+    "(loans_lenders_norm.loc[loans_lenders_norm.loan_id==657326])\n",
+    "test.loc[test['loan_id']==657326]\n",
+    "\n",
+    "Dalla tabella uno ci sono solo due landers mentre nella due viene detto 3"
    ]
   }
  ],
