--- a/Progetto2019.ipynb
+++ b/Progetto2019.ipynb
@@ -3381,7 +3381,7 @@
    "metadata": {},
    "source": [
     "Il metodo precedentemente descritto benchè funzionante risulta estremamente lento da calcolare, per ovviare a questo viene qui presentato un metodo alternativo molto più rapido del precendete.<br>\n",
-    "Qui invece di calcolare sulla lista già esplosa il calcolo viene effettuato sul DF originale per scompattarlo in seguito, inoltre viene iutilizzato il ciclo itertuples che è molto più rapido"
+    "Qui invece di calcolare sulla lista già esplosa il calcolo viene effettuato sul DF originale per scompattarlo in seguito, inoltre viene utilizzato il ciclo itertuples che è molto più rapido"
    ]
   },
   {
