Ultime modifiche finali

--- a/Progetto2019.ipynb
+++ b/Progetto2019.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Progetto FoCS 2019 Monti Stefano - 784100"
+    "### Progetto FoCS 2019-2020 Monti Stefano - 784100"
    ]
   },
   {
@@ -319,7 +319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Versione eliminando i record con planned_expiration_time o disburse_time nulli"
+    "### Versione eliminando i record con planned_expiration_time o disburse_time nulli"
    ]
   },
   {
@@ -570,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Versione che aggiunge NaN in duration se planned_expiration_time o disburse_time risultano nulli"
+    "### Versione che aggiunge NaN in duration se planned_expiration_time o disburse_time risultano nulli"
    ]
   },
   {
@@ -2335,7 +2335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NOTA: questo primo approccio è puramente dimostrativo della tecnica più \"elegante\" ma troppo dispendiosa in termini di tempo. La soluzione effettivamente utilizzata si trova sotto, al punto 8-1"
+    "## NOTA: questo primo approccio è puramente dimostrativo della tecnica più \"elegante\" ma troppo dispendiosa in termini di tempo. La soluzione effettivamente utilizzata si trova sotto, al punto 8-1"
    ]
   },
   {
@@ -10233,7 +10233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
